--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Card tweets</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../src//images//favicon.ico" type="image/x-icon" />
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
